--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,36 +1,194 @@
-<div class="jumbotron text-center">
-			<form action="/form_search" method="post">
-				<div class="form-group">
-					<label for="artistName">Artist</label>
-					<input type="text" class="form-control" id="artistName" placeholder="Taylor Swift">
-					
-				</div>
-				<div class="form-group">
-					<label for="location">location</label>
-					<input type="text" class="form-control" id="location" placeholder="Berkeley">
-				</div>
-				<div class="form-group">
-					<label for="date">location</label>
-					<input type="text" class="form-control" id="date" placeholder="02/05/2018">
-				</div>
-				<button type="submit" class="btn btn-primary">Submit</button>
-			</form>	
-			<hr>
-			<hr>	
-			<form ref='uploadForm' id='uploadForm' action='/file_search' method='post' encType="multipart/form-data">
-				<input type="file" name="sampleFile" />
-				<input type='submit' value='Upload!' />
-			</form>
 
-			<hr>
-			<hr>
-			<div class="jumbotron text-center">
-			<h4> Record the Song and Find the info</h4>
-			<button><i class="fa fa-microphone fa-2x" aria-hidden="true" id="icon"></i></button>
-			<button id="record">Start recording</button>
+    <header>
+        <div class="navbar navbar-add flex-between">
+            <h2>BandWagon</h2>
+            <section class='navigation'>
+                <ul class="nav-item-wrapper">
+                    <li><a class="navitems" href="">EVENTS</a></li>
+                    <li><a class="navitems" href="portfolio.html">HELP</a></li>
+                    <li><button class="navitems" id='signUp_button'>SIGN IN</button></li>
+                </ul>
+            </section>
+        </div>
+        <div class='head-img-wrapper'>
+            <img src='../public/images/bg-masthead.jpg' alt='picture of live concert as theme for the web page.'>
+            <!-- Photo by Josh Sorenson from Pexels -->
+            <div id="signUp_pop" class="modal">
+                <div class="modal-content">
+                    <span class="close" id='close_button'>&times;</span>
+                    <form class="modal-content">
+                        <div class="container">
+                            <h1>Sign Up</h1>
+                            <p>Please fill in this form to create an account.</p>
+                            <hr>
+                            <label for="email"><b>Email</b></label>
+                            <input id='account-email' type="text" placeholder="Enter Email" name="email" required>
 
-			<button id="stop">Stop recording</button>
-			</div>
-			<div class="audio-data"></div>
-			
-		</div>
+                            <label for="psw"><b>Password</b></label>
+                            <input id='account-password' type="password" placeholder="Enter Password" name="psw"
+                                required>
+
+                            <label for="psw-repeat"><b>Repeat Password</b></label>
+                            <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+                            <label>
+                                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px">
+                                Remember me
+                            </label>
+
+                            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms &
+                                    Privacy</a>.</p>
+
+                            <div class="clearfix">
+                                <button id='cancel-btn' type="button" onclick="document.getElementById('signUp_pop').style.display='none'"
+                                    class="cancelbtn">Cancel</button>
+                                <button id='singUp-form-btn' type="submit" class="signupbtn">Sign Up</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class='title-wrapper flex-center'>
+            <h1 class="text-light">Get on the bandwagon</h1>
+            <div class='form-wrapper text-format'>
+                <form class='form-attribute hther'>
+                    <div class='form-group'>
+                        <input type="name" class="form-control" id="artist-name" placeholder="artist/keyword">
+                    </div>
+
+                    <div class='form-group'>
+                        <input type="location" class="form-control" id="location" placeholder="Berkeley">
+                    </div>
+
+                    <div class='form-group'>
+                        <input type="text" class="form-control" id="date" placeholder="2018-08-20">
+                    </div>
+
+                    <input type="button" class="btn btn-warning" id='sendform' value="search">
+                </form>
+            </div>
+        </div>
+    </header>
+    <div class='top-label'>
+        <div class='label-text'>Find your event - Get your ticket</div>
+    </div>
+    <div class="main-wrapper">
+        <div class='left-main-wrapper'>
+            <div class='upper-column'>
+                <div class='artist-image' id='artImg'></div>
+            </div>
+            <!-- <div class='bottom-column'>
+                    <div class='artist-image' id='artImg'></div>
+            </div> -->
+
+        </div>
+        <div class='post-wrapper' id='event-posts'>
+            <!-- <div class='post-card'>
+                <div class='post-head'></div>
+                <div class='post-body'><p>this is a placeholder</p></div>
+            </div>
+            <div class='post-card'>
+                <div class='post-head'></div>
+                <div class='post-body'><p>this is a placeholder</p></div>
+            </div>
+            <div class='post-card'>
+                <div class='post-head'></div>
+                <div class='post-body'><p>this is a placeholder</p></div>
+            </div> -->
+        </div>
+        <!-- <div class="list-items-color body-text">
+            <div class="lyrics">
+                <div>
+                    <h4 class="text-center">Popular song By :<span class="artist"></span></h4>
+                </div>
+                <hr class="bg-warning">
+                <textarea class="lyric form-control text-center bg-dark text-light" rows="7"></textarea>
+            </div> -->
+        <!-- <hr class="bg-warning">
+            <h2 class="text-center"> List of all the Events</h2>
+            <hr class="bg-warning"> -->
+        <section id="information">
+            <div id="picture"></div>
+        </section>
+        <div class='flex-center'>
+            <div id='mapid2'></div>
+        </div>
+    </div>
+    </div>
+    <div>
+       
+        <div class="jumbotron text-center">
+        <form ref='uploadForm' id='uploadForm' action='/file_search' method='post' encType="multipart/form-data">
+        <input type="file" name="sampleFile" />
+        <input type='submit' value='Upload!' />
+        </form>
+        <hr>
+        <h4> Record the Song and Find the info</h4>
+        <i class="fa fa-microphone fa-2x record-icon" aria-hidden="true" id="icon"></i>
+        {{!-- <button id="record">Start recording</button>
+
+        <button id="stop">Stop recording</button> --}}
+        <hr>
+
+        <div class="audio-data"></div>
+        </div>
+        
+    </div>
+
+    <footer class="black-foot">
+        <div class="footer-wrapper">
+            <div class="component-wrapper-left">
+                <a class="link-white" href="index.html">
+
+                </a>
+                <div class="icon-wrapper">
+                    <ul>
+                        <li class="icon">
+                            <a href="https://www.linkedin.com/in/takahiro-kawaguchi-972aa2134/">
+                                <i class="fab fa-linkedin fa-2x" alt="linkedin icon"></i>
+                            </a>
+                        </li>
+                        <li class="icon">
+                            <a href="https://github.com/aaio0413">
+                                <i class="fab fa-github fa-2x" alt="github icon"></i>
+                            </a>
+                        </li>
+                        <li class="icon">
+                            <a href="https://www.facebook.com/takahiro.kawaguchi.904">
+                                <i class="fab fa-facebook-square fa-2x" alt="facebook icon"></i>
+                            </a>
+                        </li>
+                        <li class="icon">
+                            <a href="https://twitter.com/aaio_0413">
+                                <i class="fab fa-twitter-square fa-2x" alt="twitter icon"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="component-wrapper-right">
+
+                <div class="third-footer">
+                    <h2>WORK</h2>
+                    <br>
+                    <ul class="footer-contents">
+
+                        <li>Pictures</li>
+                        <li>Pages</li>
+                    </ul>
+                </div>
+                <div class="fourth-footer">
+                    <h2>CLIENTS</h2>
+                    <br>
+                    <ul class="footer-contents">
+
+                        <li>Contact Us</li>
+                        <li>About Us</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+   
