--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,9 @@
             <h2>BandWagon</h2>
             <section class='navigation'>
                 <ul class="nav-item-wrapper">
-                    <li><a class="navitems" href="">EVENTS</a></li>
+                    <li><a class="navitems" href="/">SEARCH</a></li>
                     <li><a class="navitems" href="portfolio.html">HELP</a></li>
-                    <li><button class="navitems" id='signUp_button'>SIGN IN</button></li>
+                    <li><a class="navitems" id='signUp_button'>SIGN IN</a></li>
                 </ul>
             </section>
         </div>
@@ -70,52 +70,8 @@
             </div>
         </div>
     </header>
-    <div class='top-label'>
-        <div class='label-text'>Find your event - Get your ticket</div>
-    </div>
-    <div class="main-wrapper">
-        <div class='left-main-wrapper'>
-            <div class='upper-column'>
-                <div class='artist-image' id='artImg'></div>
-            </div>
-            <!-- <div class='bottom-column'>
-                    <div class='artist-image' id='artImg'></div>
-            </div> -->
-
-        </div>
-        <div class='post-wrapper' id='event-posts'>
-            <!-- <div class='post-card'>
-                <div class='post-head'></div>
-                <div class='post-body'><p>this is a placeholder</p></div>
-            </div>
-            <div class='post-card'>
-                <div class='post-head'></div>
-                <div class='post-body'><p>this is a placeholder</p></div>
-            </div>
-            <div class='post-card'>
-                <div class='post-head'></div>
-                <div class='post-body'><p>this is a placeholder</p></div>
-            </div> -->
-        </div>
-        <!-- <div class="list-items-color body-text">
-            <div class="lyrics">
-                <div>
-                    <h4 class="text-center">Popular song By :<span class="artist"></span></h4>
-                </div>
-                <hr class="bg-warning">
-                <textarea class="lyric form-control text-center bg-dark text-light" rows="7"></textarea>
-            </div> -->
-        <!-- <hr class="bg-warning">
-            <h2 class="text-center"> List of all the Events</h2>
-            <hr class="bg-warning"> -->
-        <section id="information">
-            <div id="picture"></div>
-        </section>
-        <div class='flex-center'>
-            <div id='mapid2'></div>
-        </div>
-    </div>
-    </div>
+   
+    
     <div>
        
         <div class="jumbotron text-center">
@@ -125,10 +81,8 @@
         </form>
         <hr>
         <h4> Record the Song and Find the info</h4>
-        <i class="fa fa-microphone fa-2x record-icon" aria-hidden="true" id="icon"></i>
-        {{!-- <button id="record">Start recording</button>
+        <i class="fa fa-microphone fa-5x record-icon" style="color:blue;"aria-hidden="true" id="icon"></i>
 
-        <button id="stop">Stop recording</button> --}}
         <hr>
 
         <div class="audio-data"></div>
@@ -169,22 +123,14 @@
             </div>
             <div class="component-wrapper-right">
 
-                <div class="third-footer">
-                    <h2>WORK</h2>
-                    <br>
-                    <ul class="footer-contents">
-
-                        <li>Pictures</li>
-                        <li>Pages</li>
-                    </ul>
-                </div>
+                
                 <div class="fourth-footer">
-                    <h2>CLIENTS</h2>
+                    <h2>Who are we ?</h2>
                     <br>
                     <ul class="footer-contents">
-
-                        <li>Contact Us</li>
-                        <li>About Us</li>
+                    <li>About Us</li>
+                    <li><a href="./contact" style="text-decoration:none">Contact Us</a></li>
+                     
                     </ul>
                 </div>
             </div>
