--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,141 +1,151 @@
 <header>
-        <div class="navbar navbar-add flex-between">
-            <h2>CapTune</h2>
-            <section class='navigation'>
-                <ul class="nav-item-wrapper">
-                    <li><a class="navitems" href="/">SEARCH</a></li>
-                    <li><a class="navitems" href="portfolio.html">HELP</a></li>
-                    <li><a class="navitems" id='signUp_button'>SIGN IN</a></li>
-                </ul>
-            </section>
-        </div>
-
-
-    </header>
-
-
-
-
-    <section class="main3">
-        <div class="contact-inner-wrapper">
-            <div class="text-wrapper-form">
-                <h2>How Can I assist you?</h2>
-                <p class="lead">If you have any question , Dont hesitate to contact us ...</p>
-            </div>
-            <form class="form-control" action="mailto:takahiro04kawaguchi13@gmail.com" method="post" id="form1">
-
-                <p class="form-label"> Fill up this form with any question you have</p>
-                <span class="flex-between">
-                    <input class="inputContact" id="firstName" type="text" name="name" placeholder="First Name">
-                    <input class="inputContact" id="lastName" type="text" name="name" placeholder="Last Name">
-                </span>
-
-                <input class="inputContact" id="input2" type="email" name="email" placeholder="email@">
-                <textarea type="text" name="comment" placeholder="Message"></textarea>
-
-                <span class="bottom-wrapper">
-                    <p class="form-accept">I certify that the information above is true and accurate.</p>
-                    <button type="submit" form="form1" value="Submit">Submit</button>
-                </span>
-            </form>
-
-
-        </div>
-
-    </section>
-
-
-
-    <div class='post-wrapper' id='event-posts'>
-        <!-- <div class='post-card'>
-                <div class='post-head'></div>
-                <div class='post-body'><p>this is a placeholder</p></div>
-            </div>
-            <div class='post-card'>
-                <div class='post-head'></div>
-                <div class='post-body'><p>this is a placeholder</p></div>
-            </div>
-            <div class='post-card'>
-                <div class='post-head'></div>
-                <div class='post-body'><p>this is a placeholder</p></div>
-            </div> -->
+    <div class="navbar navbar-add flex-between">
+        <h2>BandWagon</h2>
+        <section class='navigation'>
+            <ul class="nav-item-wrapper">
+                <li>
+                    <a class="navitems" href="/">SEARCH</a>
+                </li>
+                <li>
+                    <a class="navitems" href="portfolio.html">HELP</a>
+                </li>
+                <li>
+                    <a class="navitems" id='signUp_button'>SIGN IN</a>
+                </li>
+            </ul>
+        </section>
     </div>
-    <!-- <div class="list-items-color body-text">
-            <div class="lyrics">
-                <div>
-                    <h4 class="text-center">Popular song By :<span class="artist"></span></h4>
+
+</header>
+
+
+<div>
+
+    <div class="jumbotron text-center">
+        <form ref='uploadForm'>
+
+
+            <div class="contact-inner-wrapper">
+                <div class="text-wrapper-form">
+                    <h2>How Can we assist you?</h2>
+                    <p class="lead">If you have any question , Dont hesitate to contact us ...</p>
                 </div>
-                <hr class="bg-warning">
-                <textarea class="lyric form-control text-center bg-dark text-light" rows="7"></textarea>
-            </div> -->
-    <!-- <hr class="bg-warning">
-            <h2 class="text-center"> List of all the Events</h2>
-            <hr class="bg-warning"> -->
-    <section id="information">
-        <div id="picture"></div>
-    </section>
+                <form class="form-control" action="mailto:maryamshokoohhi@gmail.com" method="post" id="form1">
+
+                    <p class="form-label"> Fill up this form with any question you have</p>
+                    <span class="flex-between">
+                        <input class="inputContact" id="firstName" type="text" name="name" placeholder="First Name">
+                        <input class="inputContact" id="lastName" type="text" name="name" placeholder="Last Name">
+                    </span>
+
+                    <input class="inputContact" id="input2" type="email" name="email" placeholder="email@">
+                    <textarea type="text" name="comment" placeholder="Message"></textarea>
+
+                    <span class="bottom-wrapper">
+                        <p class="form-accept"></p>
+                        <button type="submit" form="form1" value="Submit">Submit</button>
+                    </span>
+                </form>
 
 
-
-
-
-
-
-
-    <footer class="black-foot">
-        <div class="footer-wrapper">
-            <div class="component-wrapper-left">
-                <a class="link-white" href="index.html">
-
-                </a>
-                <div class="icon-wrapper">
-                    <ul>
-                        <li class="icon">
-                            <a href="https://www.linkedin.com/in/takahiro-kawaguchi-972aa2134/">
-                                <i class="fab fa-linkedin fa-2x" alt="linkedin icon"></i>
-                            </a>
-                        </li>
-                        <li class="icon">
-                            <a href="https://github.com/aaio0413">
-                                <i class="fab fa-github fa-2x" alt="github icon"></i>
-                            </a>
-                        </li>
-                        <li class="icon">
-                            <a href="https://www.facebook.com/takahiro.kawaguchi.904">
-                                <i class="fab fa-facebook-square fa-2x" alt="facebook icon"></i>
-                            </a>
-                        </li>
-                        <li class="icon">
-                            <a href="https://twitter.com/aaio_0413">
-                                <i class="fab fa-twitter-square fa-2x" alt="twitter icon"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
             </div>
-            <div class="component-wrapper-right">
 
-                <div class="third-footer">
-                    <h2>WORK</h2>
-                    <br>
-                    <ul class="footer-contents">
 
-                        <li>Pictures</li>
-                        <li>Pages</li>
-                    </ul>
-                </div>
-                <div class="fourth-footer">
-                    <h2>CLIENTS</h2>
-                    <br>
-                    <ul class="footer-contents">
 
-                        <li>Contact Us</li>
-                        <li>About Us</li>
-                    </ul>
-                </div>
+        </form>
+
+
+
+    </div>
+
+</div>
+
+<footer class="black-foot">
+    <div class="footer-wrapper">
+        <div class="component-wrapper-left">
+            <a class="link-white" href="index.html">
+
+            </a>
+            <div class="icon-wrapper">
+                <ul>
+                    <li class="icon">
+                        <a href="https://www.linkedin.com/in/takahiro-kawaguchi-972aa2134/">
+                            <i class="fab fa-linkedin fa-2x" alt="linkedin icon"></i>
+                        </a>
+                    </li>
+                    <li class="icon">
+                        <a href="https://github.com/Project-Alpha-Team/OmegaProject">
+                            <i class="fab fa-github fa-2x" alt="github icon"></i>
+                        </a>
+                    </li>
+                    <li class="icon">
+                        <a href="https://www.facebook.com">
+                            <i class="fab fa-facebook-square fa-2x" alt="facebook icon"></i>
+                        </a>
+                    </li>
+                    <li class="icon">
+                        <a href="https://twitter.com">
+                            <i class="fab fa-twitter-square fa-2x" alt="twitter icon"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </footer>
+        <div class="component-wrapper-right">
 
 
-    
+            <div class="fourth-footer">
+                <h2>Who are we ?</h2>
+                <br>
+                <ul class="footer-contents">
+                    <li>About Us</li>
+                    <li>
+                        <a href="./contact" style="text-decoration:none">Contact Us</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
+
+
+
+
+
+
+
+<!--
+
+<section class="main3">
+    <div class="contact-inner-wrapper">
+        <div class="text-wrapper-form">
+            <h2>How Can I assist you?</h2>
+            <p class="lead">If you have any question , Dont hesitate to contact us ...</p>
+        </div>
+        <form class="form-control" action="mailto:takahiro04kawaguchi13@gmail.com" method="post" id="form1">
+
+            <p class="form-label"> Fill up this form with any question you have</p>
+            <span class="flex-between">
+                <input class="inputContact" id="firstName" type="text" name="name" placeholder="First Name">
+                <input class="inputContact" id="lastName" type="text" name="name" placeholder="Last Name">
+            </span>
+
+            <input class="inputContact" id="input2" type="email" name="email" placeholder="email@">
+            <textarea type="text" name="comment" placeholder="Message"></textarea>
+
+            <span class="bottom-wrapper">
+                <p class="form-accept">I certify that the information above is true and accurate.</p>
+                <button type="submit" form="form1" value="Submit">Submit</button>
+            </span>
+        </form>
+
+
+    </div>
+
+</section>
+
+-->
