--- a/public/css/main.css
+++ b/public/css/main.css
@@ -150,17 +150,17 @@ body {
     /* Black w/ opacity */
 }
 
-.modal-content {
+.modal-wrapper {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 85%;
 }
 
 /* The Close Button (x) */
 .close {
-    position: absolute;
+    /* position: absolute; */
     right: 35px;
     top: 15px;
     font-size: 40px;
@@ -169,7 +169,7 @@ body {
 }
 
 /* Full-width input fields */
-.modal-content input[type=text],
+.modal-wrapper input[type=text],
 input[type=password] {
     width: 100%;
     padding: 15px;
@@ -180,13 +180,13 @@ input[type=password] {
 }
 
 /* Add a background color when the inputs get focus */
-.modal-content input[type=text]:focus,
+.modal-wrapper input[type=text]:focus,
 input[type=password]:focus {
     background-color: #ddd;
     outline: none;
 }
 
-.modal-content button {
+.modal-wrapper button {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
