--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
                     <a class="navitems" href="portfolio.html">HELP</a>
                 </li>
                 <li>
-                    <a class="navitems" id='signUp_button'>SIGN IN</a>
+                     <button class="navitems" id="signUp_button">SIGN IN</button>
                 </li>
             </ul>
         </section>
@@ -18,45 +18,38 @@
     <div class='head-img-wrapper'>
         <img src='../public/images/bg-masthead.jpg' alt='picture of live concert as theme for the web page.'>
         <!-- Photo by Josh Sorenson from Pexels -->
-        <div id="signUp_pop" class="modal">
-            <div class="modal-content">
-                <span class="close" id='close_button'>&times;</span>
-                <form class="modal-content">
-                    <div class="container">
-                        <h1>Sign Up</h1>
-                        <p>Please fill in this form to create an account.</p>
-                        <hr>
-                        <label for="email">
-                            <b>Email</b>
-                        </label>
-                        <input id='account-email' type="text" placeholder="Enter Email" name="email" required>
 
-                        <label for="psw">
-                            <b>Password</b>
-                        </label>
-                        <input id='account-password' type="password" placeholder="Enter Password" name="psw" required>
-
-                        <label for="psw-repeat">
-                            <b>Repeat Password</b>
-                        </label>
-                        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-                        <label>
-                            <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-                        </label>
-
-                        <p>By creating an account you agree to our
-                            <a href="#" style="color:dodgerblue">Terms & Privacy
-                            </a>.</p>
-
-                        <div class="clearfix">
-                            <button id='cancel-btn' type="button" onclick="document.getElementById('signUp_pop').style.display='none'" class="cancelbtn">Cancel</button>
-                            <button id='singUp-form-btn' type="submit" class="signupbtn">Sign Up</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+		<div id="signUp_pop" class="modal">
+			<div class="modal-wrapper">
+				<span class="close" id='close_button'>&times;</span>
+				<form class="modal-wrapper">
+					<div class="container">
+						<h1>Sign Up</h1>
+						<p>Please fill in this form to create an account.</p>
+						<hr>
+						<label for="email"><b>Email</b></label>
+						<input id='account-email' type="text" placeholder="Enter Email" name="email" required>
+				
+						<label for="psw"><b>Password</b></label>
+						<input id='account-password' type="password" placeholder="Enter Password" name="psw" required>
+				
+						<label for="psw-repeat"><b>Repeat Password</b></label>
+						<input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+						
+						<label>
+						<input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+						</label>
+				
+						<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+				
+						<div class="clearfix">
+						<button id='cancel-btn' type="button" onclick="document.getElementById('signUp_pop').style.display='none'" class="cancelbtn">Cancel</button>
+						<button id='singUp-form-btn' type="submit" class="signupbtn">Sign Up</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
     </div>
     <div class='title-wrapper flex-center'>
         <h1 class="text-light">Get on the bandwagon</h1>
