--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
         </section>
     </div>
     <div class='head-img-wrapper'>
-        <img src='../public/images/bg-masthead.jpg' alt='picture of live concert as theme for the web page.'>
+        <img src='./../app/public/images/bg-masthead.jpg' alt='picture of live concert as theme for the web page.'>
         <!-- Photo by Josh Sorenson from Pexels -->
 
 		<div id="signUp_pop" class="modal">
@@ -27,18 +27,24 @@
 						<h1>Sign Up</h1>
 						<p>Please fill in this form to create an account.</p>
 						<hr>
-						<label for="email"><b>Email</b></label>
+						<label for="firstName"><b>First Name</b></label>
+						<input id='user_firstName' type="text" placeholder="First Name" name="firstName" required>
+
+                        <label for="lastName"><b>Last Name</b></label>
+						<input id='user_lastName' type="text" placeholder="Last Name" name="lastName" required>
+
+                        <label for="email"><b>Email</b></label>
 						<input id='account-email' type="text" placeholder="Enter Email" name="email" required>
 				
-						<label for="psw"><b>Password</b></label>
+						{{!-- <label for="psw"><b>Password</b></label>
 						<input id='account-password' type="password" placeholder="Enter Password" name="psw" required>
 				
 						<label for="psw-repeat"><b>Repeat Password</b></label>
-						<input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+						<input type="password" placeholder="Repeat Password" name="psw-repeat" required> --}}
 						
-						<label>
+						{{!-- <label>
 						<input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-						</label>
+						</label> --}}
 				
 						<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 				
