--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>BandWagon</title>
-	<link rel="stylesheet" href="../../public/css/main.css" type="text/css" />
+	<link rel="stylesheet" href="../../app/public/css/main.css" type="text/css" />
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
-	<script src="../../public/js/main.js" type="application/javascript"></script>
+	<script src="../../app/public/js/main.js" type="application/javascript"></script>
 
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
 	 crossorigin="anonymous">
