--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	<script src="../../app/public/js/main.js" type="application/javascript"></script>
+	<script src="../../app/public/js/main2.js" type="application/javascript"></script>
 
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
 	 crossorigin="anonymous">
@@ -41,10 +42,77 @@
 
 <body>
 
-	{{{body}}}
+{{{body}}}
+ <div class="container container-addition hide-show">
+        <div class="jumbotron list-items-color body-text">
+            <div class="lyrics">
+                <div>
+                    <h4 class="text-center">Popular song By :<span class="artist"></span></h4>
+                </div>
+                <hr class="bg-warning">
+                <textarea class="lyric form-control text-center bg-light text-dark" rows="7"></textarea>
+            </div>
+            <hr class="bg-warning">
+            <h2 class="text-center"> List of all the Events</h2>
+            <hr class="bg-warning">
+            <section id="information">
+                <div id="picture"></div>
+            </section>
+            <div class='flex-center'>
+                <div id='mapid2'></div>
+            </div>   
+        </div>
+</div>
 
-	
+
 
 </body>
+<footer class="black-foot">
+    <div class="footer-wrapper">
+        <div class="component-wrapper-left">
+            <a class="link-white" href="index.html">
 
+            </a>
+            <div class="icon-wrapper">
+                <ul>
+                    <li class="icon">
+                        <a href="https://www.linkedin.com">
+                            <i class="fab fa-linkedin fa-2x" alt="linkedin icon"></i>
+                        </a>
+                    </li>
+                    <li class="icon">
+                        <a href="https://github.com/Project-Alpha-Team/OmegaProject">
+                            <i class="fab fa-github fa-2x" alt="github icon"></i>
+                        </a>
+                    </li>
+                    <li class="icon">
+                        <a href="https://www.facebook.com">
+                            <i class="fab fa-facebook-square fa-2x" alt="facebook icon"></i>
+                        </a>
+                    </li>
+                    <li class="icon">
+                        <a href="https://twitter.com">
+                            <i class="fab fa-twitter-square fa-2x" alt="twitter icon"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="component-wrapper-right">
+
+
+            <div class="fourth-footer">
+                <h2>Who are we ?</h2>
+                <br>
+                <ul class="footer-contents">
+                    <li>About Us</li>
+                    <li>
+                        <a href="./contact" style="text-decoration:none">Contact Us</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
