--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <header>
     <div class="navbar navbar-add flex-between">
-        <h2>BandWagon</h2>
+       <h2><a href="/" style="text-decoration:none">BandWagon</a></h2>
         <section class='navigation'>
             <ul class="nav-item-wrapper">
                 <li>
@@ -82,7 +82,7 @@
 
 <div>
 
-    <div class="jumbotron text-center">
+    <div class="container jumbotron text-center">
         <form ref='uploadForm' id='uploadForm' action='/file_search' method='post' encType="multipart/form-data">
             <input type="file" name="sampleFile" />
             <input type='submit' value='Upload!' />
@@ -98,51 +98,3 @@
 
 </div>
 
-<footer class="black-foot">
-    <div class="footer-wrapper">
-        <div class="component-wrapper-left">
-            <a class="link-white" href="index.html">
-
-            </a>
-            <div class="icon-wrapper">
-                <ul>
-                    <li class="icon">
-                        <a href="https://www.linkedin.com">
-                            <i class="fab fa-linkedin fa-2x" alt="linkedin icon"></i>
-                        </a>
-                    </li>
-                    <li class="icon">
-                        <a href="https://github.com/Project-Alpha-Team/OmegaProject">
-                            <i class="fab fa-github fa-2x" alt="github icon"></i>
-                        </a>
-                    </li>
-                    <li class="icon">
-                        <a href="https://www.facebook.com">
-                            <i class="fab fa-facebook-square fa-2x" alt="facebook icon"></i>
-                        </a>
-                    </li>
-                    <li class="icon">
-                        <a href="https://twitter.com">
-                            <i class="fab fa-twitter-square fa-2x" alt="twitter icon"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="component-wrapper-right">
-
-
-            <div class="fourth-footer">
-                <h2>Who are we ?</h2>
-                <br>
-                <ul class="footer-contents">
-                    <li>About Us</li>
-                    <li>
-                        <a href="./contact" style="text-decoration:none">Contact Us</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
