Added right email database part. Fixed some html and css.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -82,7 +82,7 @@
 
 <div>
 
-    <div class="container jumbotron text-center">
+    <div class="jumbotron text-center" style="margin-top: 2rem;">
         <form ref='uploadForm' id='uploadForm' action='/file_search' method='post' encType="multipart/form-data">
             <input type="file" name="sampleFile" />
             <input type='submit' value='Upload!' />
