--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,7 @@
 <body>
 
 {{{body}}}
- <div class="container container-addition hide-show">
+ <div class="container-addition hide-show">
         <div class="jumbotron list-items-color body-text">
             <div class="lyrics">
                 <div>
@@ -74,7 +74,7 @@
 
             </a>
             <div class="icon-wrapper">
-                <ul>
+                <ul style="list-style: none;">
                     <li class="icon">
                         <a href="https://www.linkedin.com">
                             <i class="fab fa-linkedin fa-2x" alt="linkedin icon"></i>
@@ -104,10 +104,10 @@
             <div class="fourth-footer">
                 <h2>Who are we ?</h2>
                 <br>
-                <ul class="footer-contents">
+                <ul class="footer-contents" style="list-style: none;">
                     <li>About Us</li>
                     <li>
-                        <a href="./contact" style="text-decoration:none">Contact Us</a>
+                        <a href="./contact" style="text-decoration:none; color:inherit;">Contact Us</a>
                     </li>
 
                 </ul>
