--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -98,6 +98,7 @@ body {
 .nav-item-wrapper {
     padding: 0;
     display: flex;
+    align-items: center;
     justify-content: space-evenly;
 }
 
