Made email system works. Heroku clearDB is connected to our mysql database. It enables user to sign up by email and store the account information on our database. I was also trying to favicon works, but it doesn't work yet.

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -801,3 +801,25 @@ li i {
         width: 90%;
     }
 }
+
+
+
+
+/*         Routes                */
+
+.email-wrapper {
+    display: flex;
+    height: 500px;
+    flex-direction: column;
+}
+
+.email-form-content {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.email-form-content input {
+    text-transform: none;
+    height: 40px;
+    width: 40%;
+}
